# onellm

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  ISSUES_3_4_5_SUMMARY.md  ISSUE_1_EVENT_LOOP_FIX.md  ISSUE_2_STREAMING_FIX.md  MANIFEST.in  NEXT_STEPS.md  PRD_SEMANTIC_CACHE.md  PROACTIVE_SCAN_RESULTS.md  README.md  SECURITY.md  TESTING_SUMMARY.md  TEST_COVERAGE.md  benchmark_cache.py  muxi-llm-prd.md  pyproject.toml  setup.py  test_security_direct.py  test_security_features.py
.github/workflows/: check-docs.yml  ci.yml  codeql.yml  rc.yml  release.yml  scorecard.yml
docs/: BREAKING_CHANGES_PR9_PR10.md  Gemfile  README.md  _config.yml  advanced-features.md  architecture.md  caching.md  configuration.md  error-handling.md  index.md  installation.md  llama_cpp_provider_plan.md  llama_cpp_tutorial.md  quickstart.md
docs/_includes/: head_custom.html
docs/api/: chat-completions.md  client.md
docs/assets/images/: site.webmanifest
docs/docs/_site/: feed.xml
docs/guides/: migration.md
docs/providers/: README.md  azure.md  bedrock.md  capabilities.md  llama_cpp.md  ollama.md  setup.md
docs/providers/llama_cpp/: README.md  provider_plan.md  tutorial.md
examples/: audio_transcription_example.py  audio_translation_example.py  azure_example.py  bedrock_example.py  cache_example.py  chat_completion_example.py  download_and_use_model.py  embedding_example.py  fallback_example.py  image_generation_example.py  json_mode_example.py  llama_cpp_example.py  ollama_example.py  parallel_operation_example.py  retry_example.py  text_to_speech_example.py  vision_capability_example.py  vision_example.py
examples/providers/: README.md  anthropic_example.py  anyscale_example.py  azure_example.py  bedrock_example.py  cohere_example.py  deepseek_example.py  fireworks_example.py  google_example.py  groq_example.py  llama_cpp_example.py  minimax_example.py  mistral_example.py  moonshot_example.py  ollama_example.py  openai_example.py  openrouter_example.py  perplexity_example.py  together_example.py  vercel_example.py  vertexai_example.py  xai_example.py
muxi/: __init__.py
muxi/llm/: __init__.py  audio.py  chat_completion.py  completion.py  embedding.py  errors.py  files.py  image.py  models.py  speech.py
muxi/llm/providers/: __init__.py  base.py  fallback.py  openai.py
muxi/llm/types/: common.py
muxi/llm/utils/: __init__.py  fallback.py  streaming.py  token_counter.py
muxi_llm/: __init__.py  audio.py  chat_completion.py  client.py  completion.py  config.py  embedding.py  errors.py  files.py  image.py  models.py  speech.py  validators.py
muxi_llm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
muxi_llm/providers/: __init__.py  base.py  fallback.py  openai.py
muxi_llm/types/: __init__.py  common.py
muxi_llm/utils/: __init__.py  fallback.py  retry.py  streaming.py  token_counter.py
onellm/: .version  __init__.py  audio.py  cache.py  chat_completion.py  completion.py  config.py  embedding.py  errors.py  files.py  http_pool.py  image.py  speech.py  validators.py
onellm/cli/: download_model.py
onellm/providers/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  cohere.py  fallback.py  google.py  llama_cpp.py  local.py  minimax.py  mistral.py  ollama.py  openai.py  openai_compatible.py  vertexai.py
onellm/types/: common.py
onellm/utils/: __init__.py  async_helpers.py  file_validator.py  streaming.py  text_cleaner.py
requirements/: build.txt  pip.txt  publish.txt
scripts/: check_doc_links.py  fix_doc_links.py
tests/: README.md  __init__.py  conftest.py  patch_providers.py  run_tests.sh  test_all_providers.py  test_anthropic_provider.py  test_audio.py  test_audio_advanced.py  test_chat_completion_advanced.py  test_client_interface.py  test_combined_coverage.py  test_completion_final.py  test_config_advanced.py  test_config_complete.py  test_config_full_coverage.py  test_embedding_complete.py  test_embedding_full_coverage.py  test_embedding_property.py  test_embedding_success.py  test_embedding_validation.py  test_fallback.py  test_fallback_100_percent.py  test_fallback_additional.py  test_fallback_api.py  test_fallback_complete.py  test_fallback_coverage.py  test_fallback_final.py  test_fallback_max.py  test_fallback_provider_advanced.py  test_fallback_provider_enhanced.py  test_fallback_streaming.py  test_fallback_utils_coverage.py  test_file_operations.py  test_file_operations_complete.py  test_file_operations_parent_creation.py  test_files_full_coverage.py  test_image.py  test_image_all.py  test_image_complete.py  (+69 more)
tests/artifacts/: README.md  azure.json  bedrock.json  meta-llama-3-8b-instruct-q4_k_m.gguf  vertexai.json
tests/integration/: README.md  test_cloud_providers.py  test_local_provider.py  test_local_providers.py  test_local_simple.py
tests/integration/providers/: test_anyscale.py  test_glm.py  test_google_security.py  test_openai_files_integration.py  test_openai_paths.py  test_openrouter.py  test_vercel.py
tests/providers/: test_azure.py  test_bedrock.py  test_llama_cpp.py  test_ollama.py
tests/unit/: test_cache.py  test_http_pool.py
tests/unit/core/: test_async_helpers.py  test_client_interface.py  test_config.py  test_file_security.py  test_pragmas.py  test_token_counter.py  test_utils.py  test_validators.py
tests/unit/features/: test_audio.py  test_fallback.py  test_image.py  test_json_mode.py  test_retries.py  test_speech.py  test_stream_timeout.py  test_streaming.py  test_vision.py
tests/unit/providers/: _httpx_mocks.py  test_all_providers.py  test_anthropic_provider.py  test_azure.py  test_cohere.py  test_deepseek.py  test_fireworks.py  test_glm_provider.py  test_google.py  test_groq.py  test_llama_cpp.py  test_local.py  test_minimax.py  test_mistral_provider.py  test_moonshot.py  test_ollama.py  test_openai_error_handling.py  test_openai_files.py  test_openai_provider.py  test_openai_streaming.py  test_openrouter.py  test_perplexity.py  (+6 more)
tests/utils/: README.md  run_real_api_tests.py  run_simple_tests.py
utils/: run_all_fixed_tests.sh  run_coverage.sh
(+11 files in other folders)
